--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "dolore",
         "dolorem",
         "doloribus",
+        "dures",
         "earum",
         "elit",
         "enim",
@@ -38,6 +39,7 @@
         "fuga",
         "Fugiat",
         "harum",
+        "Ieads",
         "illo",
         "illum",
         "incidunt",
@@ -61,6 +63,7 @@
         "numquam",
         "odio",
         "officiis",
+        "Optimazadion",
         "optio",
         "perferendis",
         "possimus",
